--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
                     <span id="phone">+54 9 11 5311-2277</span>
                 </div>
                 <div class="contact-item">
+                    <i class="fas fa-phone"></i>
+                    <span id="phone2">Teléfono: 40066600</span>
+                </div>
+                <div class="contact-item">
                     <i class="fas fa-envelope"></i>
                     <a href="mailto:veronicanunez466@gmail.com" id="email">veronicanunez466@gmail.com</a>
                 </div>
