--- a/index.html
+++ b/index.html
@@ -28,11 +28,7 @@
             <div class="contact-info">
                 <div class="contact-item">
                     <i class="fas fa-phone"></i>
-                    <span id="phone">+54 9 11 5311-2277</span>
-                </div>
-                <div class="contact-item">
-                    <i class="fas fa-phone"></i>
-                    <span id="phone2">Teléfono: 40066600</span>
+                    <span id="phone">1531122277</span>
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-envelope"></i>
