Agregar sección 'Actividades Personales' al lado de 'Personales' en habilidades

--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
                         <div class="skills-list" id="soft-skills">
                         </div>
                     </div>
+                    <div class="skills-column">
+                        <h4>Actividades Personales</h4>
+                        <div class="skills-list" id="personal-activities">
+                        </div>
+                    </div>
                 </div>
             </section>
 
