Agregar nueva sección 'Informática' al CV

--- a/index.html
+++ b/index.html
@@ -100,6 +100,17 @@
                 <div class="languages-list" id="languages-list">
                 </div>
             </section>
+
+            <!-- Computer Skills Section -->
+            <section class="section">
+                <h3 class="section-title">Informática</h3>
+                <div class="skills-container">
+                    <div class="skills-column">
+                        <div class="skills-list" id="computer-skills">
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
     </div>
 
